Daniel Ivanov, lab 10